syntax="proto3";
package proto;

option go_package = "proto/order";
import "google/api/annotations.proto";

message Order {
    string id = 1;
    string name = 2;
    int64 price = 4;
    int64 quantity = 5;
}
message OrderRequest {
    // array of orders
    repeated Order orders = 1;
}

message OrderResponse {
    // array of orders
    repeated Order orders = 1;
    int64 totalPrice = 2;
}

service OrderService {
    rpc CreateOrder(OrderRequest) returns (OrderResponse) {
        option (google.api.http) = {
            post: "/v1/order"
            body: "*"
        };
    };
    rpc GetOrder(OrderRequest) returns (OrderResponse);
    rpc UpdateOrder(OrderRequest) returns (OrderResponse);
    rpc DeleteOrder(OrderRequest) returns (OrderResponse);
}